[gd_scene load_steps=6 format=3 uid="uid://bxxid2eqls1qf"]

[ext_resource type="Script" path="res://scripts/ui/shop.gd" id="1_5n34d"]
[ext_resource type="FontFile" uid="uid://jg7kaoe8c0nn" path="res://fonts/Scary Halloween Font.ttf" id="1_xy6ku"]
[ext_resource type="PackedScene" uid="uid://d345qpyil1brc" path="res://scenes/cards/shop_card.tscn" id="3_brvs8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u8oki"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqsl3"]
bg_color = Color(1, 0.105882, 0.0823529, 1)

[node name="shop" type="CanvasLayer"]
visible = false
script = ExtResource("1_5n34d")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.0
offset_top = -300.0
offset_right = 539.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -795.0
offset_top = 611.0
offset_right = -412.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/Panel"]
self_modulate = Color(1, 1, 0.145098, 1)
layout_mode = 0
offset_left = 220.0
offset_top = -595.0
offset_right = 309.0
offset_bottom = -562.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_xy6ku")
theme_override_font_sizes/font_size = 30
text = "Shop"

[node name="ShopCard" parent="." instance=ExtResource("3_brvs8")]
offset_left = -316.0
offset_top = 13.0
offset_right = -316.0
offset_bottom = 13.0

[node name="ShopCard2" parent="." instance=ExtResource("3_brvs8")]
offset_left = 19.0
offset_top = 15.0
offset_right = 19.0
offset_bottom = 15.0

[node name="ShopCard3" parent="." instance=ExtResource("3_brvs8")]
offset_left = 352.0
offset_top = 15.0
offset_right = 352.0
offset_bottom = 15.0

[node name="exitButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 485.0
offset_top = -299.0
offset_right = 538.0
offset_bottom = -244.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8oki")
theme_override_styles/normal = SubResource("StyleBoxFlat_kqsl3")
text = "X"

[connection signal="pressed" from="exitButton" to="." method="_on_exit_button_pressed"]
